Refactoring and tests.
